--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -7,6 +7,7 @@
     <script type="text/javascript" th:src="@{/js/jquery.min.js}"></script>
     <!-- bootstrap -->
     <link rel="stylesheet" type="text/css" th:href="@{/bootstrap/css/bootstrap.min.css}"/>
+<!--    <link rel="stylesheet" type="text/css" th:href="@{/css/bodycss.css}">-->
     <script type="text/javascript" th:src="@{/bootstrap/js/bootstrap.min.js}"></script>
     <!-- jquery-validator -->
     <script type="text/javascript" th:src="@{/jquery-validation/jquery.validate.min.js}"></script>
@@ -20,24 +21,24 @@
     <title>MainPage</title>
 </head>
 <body>
-<div class="panel panel-default">
-    <div class="panel-heading">新闻列表</div>
-    <table class="table" id="goodslist">
-        <tr>
+<div class="panel panel-default ">
+    <div class="panel-heading text-center" style="width: 50%; margin: 0 auto">新闻列表</div>
+    <table class="table table-striped table-bordered table-hover text-center table-condensed" style="width: 50%; margin:0 auto;"  id="newslist">
+        <tr >
             <td>新闻编号</td>
+            <td>来源</td>
             <td>新闻标题</td>
-            <td>新闻作者</td>
-            <td>新闻内容</td>
+<!--            <td>新闻内容</td>-->
             <td>发布日期</td>
             <td>详情</td>
         </tr>
         <tr th:each="news : ${newsList}">
             <td th:text="${news.id}"></td>
-            <td th:text="${news.title}"></td>
             <td th:text="${news.author}"></td>
-            <td th:text="${news.content}"></td>
+            <td th:text="${news.title}"></td>
+<!--            <td th:text="${news.content}"></td>-->
             <td th:text="${#dates.format(news.pubDate, 'yyyy-MM-dd HH:mm:ss')}"></td>
-            <!--            <td><a th:href="">详情</a></td>-->
+            <td><a th:href="'/newsDetail_'+${news.id}">详情</a></td>
         </tr>
     </table>
 </div>
