--- a/src/main/resources/templates/details.html
+++ b/src/main/resources/templates/details.html
@@ -4,21 +4,117 @@
     <meta charset="UTF-8">
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     <!-- jquery -->
-    <script type="text/javascript" th:src="@{/js/jquery.min.js}"></script>
+    <script type="text/javascript" th:src="@{/static/js/jquery.min.js}"></script>
     <!-- bootstrap -->
-    <link rel="stylesheet" type="text/css" th:href="@{/bootstrap/css/bootstrap.min.css}"/>
-    <script type="text/javascript" th:src="@{/bootstrap/js/bootstrap.min.js}"></script>
+    <link rel="stylesheet" type="text/css" th:href="@{/static/bootstrap/css/bootstrap.min.css}"/>
+
+    <link th:href="@{/static/bootstrap/blog.css}" type="text/css" rel="stylesheet">
+    <script type="text/javascript" th:src="@{/static/bootstrap/js/bootstrap.min.js}"></script>
     <!-- jquery-validator -->
-    <script type="text/javascript" th:src="@{/jquery-validation/jquery.validate.min.js}"></script>
-    <script type="text/javascript" th:src="@{/jquery-validation/localization/messages_zh.min.js}"></script>
+    <script type="text/javascript" th:src="@{/static/jquery-validation/jquery.validate.min.js}"></script>
+    <script type="text/javascript" th:src="@{/static/jquery-validation/localization/messages_zh.min.js}"></script>
     <!-- layer -->
-    <script type="text/javascript" th:src="@{/layer/layer.js}"></script>
+    <script type="text/javascript" th:src="@{/static/layer/layer.js}"></script>
     <!-- md5.js -->
-    <script type="text/javascript" th:src="@{/js/md5.min.js}"></script>
+    <script type="text/javascript" th:src="@{/static/js/md5.min.js}"></script>
     <!-- common.js -->
-    <script type="text/javascript" th:src="@{/js/common.js}"></script>
+    <script type="text/javascript" th:src="@{/static/js/common.js}"></script>
 </head>
 <body>
+<nav class="navbar navbar-default">
+    <div class="container-fluid">
+        <!-- Brand and toggle get grouped for better mobile display -->
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" th:href="'/getNewsList'">
+                <span class="glyphicon glyphicon-home" aria-hidden="true"></span>Home
+            </a>
+        </div>
 
+        <!-- Collect the nav links, forms, and other content for toggling -->
+        <div class="collapse navbar-collapse " id="bs-example-navbar-collapse-1">
+            <!--搜索栏 -->
+            <form class="navbar-form navbar-left">
+                <div class="form-group">
+                    <input type="text" class="form-control" placeholder="Search">
+                </div>
+                <button type="submit" class="btn btn-default bottom-right">Submit</button>
+            </form>
+            <ul class="nav navbar-nav navbar-right">
+                <li><a th:href="'/recommend'">Reconmmend</a></li>
+
+                <li class="dropdown">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+                        <span class="glyphicon glyphicon-user" aria-hidden="true"></span>
+                        <span th:text="${user.username}"></span>
+                        <span class="caret">
+                        </span>
+                    </a>
+                    <ul class="dropdown-menu">
+                        <li><a href="#">Information</a></li>
+                        <li><a href="#">Settings</a></li>
+                        <li role="separator" class="divider"></li>
+                        <li><a href="#">LogOut</a></li>
+                    </ul>
+                </li>
+            </ul>
+        </div>
+    </div>
+</nav>
+<div class="container">
+
+    <div class="blog-header">
+        <h1 class="blog-title" th:text="${newsDetail.title}"></h1>
+        <p class="lead blog-description"></p>
+    </div>
+
+    <div class="row">
+
+        <div class="col-sm-8 blog-main">
+
+            <div class="blog-post">
+
+                <p class="blog-post-meta">发布于：<strong th:text="${#dates.format(newsDetail.pubDate, 'yyyy-MM-dd HH:mm:ss')}"></strong>&nbsp;&nbsp;&nbsp;<em th:text="${newsDetail.author}"></em></p>
+
+                <p th:text="${newsDetail.content}"></p>
+                <hr>
+            </div><!-- /.blog-post -->
+
+
+
+        </div><!-- /.blog-main -->
+
+        <div class="col-sm-3 col-sm-offset-1 blog-sidebar">
+            <div class="sidebar-module sidebar-module-inset">
+                <h4>About</h4>
+                <p>s y w  <em>新闻推荐系统 1.0</em></p>
+            </div>
+            <div class="sidebar-module">
+                <h4>推荐新闻</h4>
+                <ol class="list-unstyled">
+                    <li><a href="#">March 2014</a></li>
+                    <li><a href="#">February 2014</a></li>
+                    <li><a href="#">January 2014</a></li>
+                    <li><a href="#">December 2013</a></li>
+                </ol>
+            </div>
+            <div class="sidebar-module">
+                <h4>了解更多</h4>
+                <ol class="list-unstyled">
+                    <li><a href="#">GitHub</a></li>
+                    <li><a href="#">QQ</a></li>
+                    <li><a href="#">call me </a></li>
+                </ol>
+            </div>
+        </div><!-- /.blog-sidebar -->
+
+    </div><!-- /.row -->
+
+</div><!-- /.container -->
 </body>
 </html>
