--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,29 +1,71 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     <!-- jquery -->
-    <script type="text/javascript" th:src="@{/js/jquery.min.js}"></script>
+    <script type="text/javascript" th:src="@{/static/js/jquery.min.js}"></script>
     <!-- bootstrap -->
-    <link rel="stylesheet" type="text/css" th:href="@{/bootstrap/css/bootstrap.min.css}"/>
+    <link rel="stylesheet" type="text/css" th:href="@{/static/bootstrap/css/bootstrap.min.css}"/>
 <!--    <link rel="stylesheet" type="text/css" th:href="@{/css/bodycss.css}">-->
-    <script type="text/javascript" th:src="@{/bootstrap/js/bootstrap.min.js}"></script>
+    <script type="text/javascript" th:src="@{/static/bootstrap/js/bootstrap.min.js}"></script>
     <!-- jquery-validator -->
-    <script type="text/javascript" th:src="@{/jquery-validation/jquery.validate.min.js}"></script>
-    <script type="text/javascript" th:src="@{/jquery-validation/localization/messages_zh.min.js}"></script>
+    <script type="text/javascript" th:src="@{/static/jquery-validation/jquery.validate.min.js}"></script>
+    <script type="text/javascript" th:src="@{/static/jquery-validation/localization/messages_zh.min.js}"></script>
     <!-- layer -->
-    <script type="text/javascript" th:src="@{/layer/layer.js}"></script>
+    <script type="text/javascript" th:src="@{/static/layer/layer.js}"></script>
     <!-- md5.js -->
-    <script type="text/javascript" th:src="@{/js/md5.min.js}"></script>
+    <script type="text/javascript" th:src="@{/static/js/md5.min.js}"></script>
     <!-- common.js -->
-    <script type="text/javascript" th:src="@{/js/common.js}"></script>
+    <script type="text/javascript" th:src="@{/static/js/common.js}"></script>
     <title>MainPage</title>
 </head>
 <body>
+<nav class="navbar navbar-default">
+    <div class="container-fluid">
+        <!-- Brand and toggle get grouped for better mobile display -->
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" th:href="'/getNewsList'">Home</a>
+        </div>
+
+        <!-- Collect the nav links, forms, and other content for toggling -->
+        <div class="collapse navbar-collapse " id="bs-example-navbar-collapse-1">
+            <!--搜索栏 -->
+            <form class="navbar-form navbar-left">
+                <div class="form-group">
+                    <input type="text" class="form-control" placeholder="Search">
+                </div>
+                <button type="submit" class="btn btn-default bottom-right">Submit</button>
+            </form>
+            <ul class="nav navbar-nav navbar-right">
+                <li><a th:href="'/recommend'">Reconmmend</a></li>
+                <li class="dropdown">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+                        <span class="glyphicon glyphicon-user" aria-hidden="true"></span>
+                        <span th:text="${user.username}"></span>
+                        <span class="caret">
+                        </span>
+                    </a>
+                    <ul class="dropdown-menu">
+                        <li><a href="#">Information</a></li>
+                        <li><a href="#">Settings</a></li>
+                        <li role="separator" class="divider"></li>
+                        <li><a href="#">LogOut</a></li>
+                    </ul>
+                </li>
+            </ul>
+        </div>
+    </div>
+</nav>
 <div class="panel panel-default ">
-    <div class="panel-heading text-center" style="width: 50%; margin: 0 auto">新闻列表</div>
-    <table class="table table-striped table-bordered table-hover text-center table-condensed" style="width: 50%; margin:0 auto;"  id="newslist">
+    <div class="panel-heading text-center" style="width: 70%; margin:0 auto">新闻列表</div>
+    <table class="table table-striped table-bordered table-hover text-center table-condensed" style="width: 70%; margin:0 auto;"  id="newslist">
         <tr >
             <td>新闻编号</td>
             <td>来源</td>
@@ -38,10 +80,40 @@
             <td th:text="${news.title}"></td>
 <!--            <td th:text="${news.content}"></td>-->
             <td th:text="${#dates.format(news.pubDate, 'yyyy-MM-dd HH:mm:ss')}"></td>
-            <td><a th:href="'/newsDetail_'+${news.id}">详情</a></td>
+            <td><a th:href="'/newsDetail?newsId='+${news.id}">详情</a></td>
         </tr>
     </table>
-</div>
+    <div class="page-link text-center">
+    <ul class="pagination">
+        <!-- <li><a href="">&laquo;</a></li> -->
+        <li>
+            <a  th:href="@{${'/getNewsList'}(pageNum=1,pageSize=${pageSize})}">首页</a>
+        </li>
 
+        <li>
+            <a th:if="${not isFirstPage}" th:href="@{${'/getNewsList'}(pageNum=${pageNum-1},pageSize=${pageSize})}">上一页</a>
+            <a th:if="${isFirstPage}" href="javascript:void(0);">上一页</a>
+        </li>
+
+        <li th:each="pageNo : ${naviPageNums}">
+            <a th:if="${pageNum eq pageNo}" href="javascript:void(0);">
+                <span th:text="${pageNo}"></span>
+            </a>
+            <a th:if="${not (pageNum eq pageNo)}" th:href="@{${'/getNewsList'}(pageNum=${pageNo},pageSize=${pageSize})}">
+                <span th:text="${pageNo}"></span>
+            </a>
+        </li>
+
+        <li>
+            <a th:if="${not isLastPage}" th:href="@{${'/getNewsList'}(pageNum=${pageNum+1},pageSize=${pageSize})}">下一页</a>
+            <a th:if="${isLastPage}" href="javascript:void(0);">下一页</a>
+        </li>
+
+        <li>
+            <a  th:href="@{${'/getNewsList'}(pageNum=${totalPages},pageSize=${pageSize})}">尾页</a>
+        </li>
+    </ul>
+</div>
+</div>
 </body>
 </html>
