--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -7,19 +7,19 @@
     <!--js jquery css 一些依赖-->
 
     <!-- jquery -->
-    <script type="text/javascript" th:src="@{/js/jquery.min.js}"></script>
+    <script type="text/javascript" th:src="@{/static/js/jquery.min.js}"></script>
     <!-- bootstrap -->
-    <link rel="stylesheet" type="text/css" th:href="@{/bootstrap/css/bootstrap.min.css}" />
-    <script type="text/javascript" th:src="@{/bootstrap/js/bootstrap.min.js}"></script>
+    <link rel="stylesheet" type="text/css" th:href="@{/static/bootstrap/css/bootstrap.min.css}" />
+    <script type="text/javascript" th:src="@{/static/bootstrap/js/bootstrap.min.js}"></script>
     <!-- jquery-validator -->
-    <script type="text/javascript" th:src="@{/jquery-validation/jquery.validate.min.js}"></script>
-    <script type="text/javascript" th:src="@{/jquery-validation/localization/messages_zh.min.js}"></script>
+    <script type="text/javascript" th:src="@{/static/jquery-validation/jquery.validate.min.js}"></script>
+    <script type="text/javascript" th:src="@{/static/jquery-validation/localization/messages_zh.min.js}"></script>
     <!-- layer -->
-    <script type="text/javascript" th:src="@{/layer/layer.js}"></script>
+    <script type="text/javascript" th:src="@{/static/layer/layer.js}"></script>
     <!-- md5.js -->
-    <script type="text/javascript" th:src="@{/js/md5.min.js}"></script>
+    <script type="text/javascript" th:src="@{/static/js/md5.min.js}"></script>
     <!-- common.js -->
-    <script type="text/javascript" th:src="@{/js/common.js}"></script>
+    <script type="text/javascript" th:src="@{/static/js/common.js}"></script>
 </head>
 <body>
 
@@ -85,7 +85,7 @@
                     // console.log(data);//前台打印 出data
                     if (data.code == 0){
                         layer.msg("成功");
-                        window.location.href = "/index";//跳转主页
+                        window.location.href = "/getNewsList";//跳转主页
                     }else {
                         layer.msg(data.message);
                     }
